tests/valid/aggregate/join_moves_running_exhaust.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "join_moves_running_exhaust",
    "description": "M2 cross-binding conformance fixture (RFC semiring-faq-unified-ir §5.3 / §7.2; bead ess-my4.2.5). The MOVES running-exhaust contraction as the DEGENERATE POSITIONAL join (§7.2): each `on` key column is one of the aggregate's own loop indices, so the value-equality gate admits every declared (sourceType x fuelType) combination — it is byte-identical to combining the factors by shared index name. running_exhaust[p] = SUM over src in sourceType, fuel in fuelType of (src*fuel)*p, with the two-key join on [[src,sourceType],[fuel,fuelType]] resolving to the self-equality no-op (src<->src, fuel<->fuel). The categorical sourceType/fuelType sets each resolve to [1,|members|] (2 members each), so the contraction has |sourceType|*|fuelType| = 4 product terms per output bin p: running_exhaust[1]=1*(1*1+1*2+2*1+2*2)=9, running_exhaust[2]=2*9=18 at t=1 from zero ICs. This is the join form ALL THREE evaluating bindings agree on: Julia/Python resolve the named key to the unique symbol drawing {from} the set (self-equality), Rust treats a loop-index key column as the positional no-op (the data-derived value-equality engine is M3). Constant-RHS shape so Julia / Rust / Python agree to integration tolerance; Go/TS validate the additive join schema.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.nux"
    ],
    "tags": [
      "aggregate",
      "join",
      "semiring",
      "sum_product",
      "moves",
      "esi",
      "degenerate-positional",
      "conformance",
      "ess-my4.2.5"
    ]
  },
  "models": {
    "MovesRunningExhaust": {
      "tolerance": {
        "rel": 1e-6,
        "abs": 1e-9
      },
      "index_sets": {
        "sourceType": {
          "kind": "categorical",
          "members": ["onroad", "nonroad"]
        },
        "fuelType": {
          "kind": "categorical",
          "members": ["gasoline", "diesel"]
        }
      },
      "variables": {
        "running_exhaust": { "type": "state", "shape": ["p"] }
      },
      "equations": [
        {
          "_comment": "D(running_exhaust[p])/dt = sum_{src in sourceType, fuel in fuelType} (src*fuel)*p, joined positionally (degenerate). sum_{src,fuel} src*fuel = 9, so running_exhaust[p]=9p: [1]=9, [2]=18 at t=1.",
          "lhs": {
            "op": "aggregate",
            "args": [],
            "output_idx": ["p"],
            "expr": {
              "op": "D",
              "args": [{ "op": "index", "args": ["running_exhaust", "p"] }],
              "wrt": "t"
            },
            "ranges": { "p": [1, 2] }
          },
          "rhs": {
            "op": "aggregate",
            "args": [],
            "output_idx": ["p"],
            "semiring": "sum_product",
            "reduce": "+",
            "ranges": {
              "p": [1, 2],
              "src": { "from": "sourceType" },
              "fuel": { "from": "fuelType" }
            },
            "join": [
              { "on": [["src", "sourceType"], ["fuel", "fuelType"]] }
            ],
            "expr": {
              "op": "*",
              "args": [
                { "op": "*", "args": ["src", "fuel"] },
                "p"
              ]
            }
          }
        }
      ],
      "tests": [
        {
          "id": "moves_running_exhaust_t1",
          "description": "Degenerate positional two-key join over the (sourceType x fuelType) categories from zero ICs. running_exhaust[p] = 9p at t=1 (cardinality |sourceType|*|fuelType| = 4 terms per bin).",
          "initial_conditions": {
            "running_exhaust[1]": 0.0,
            "running_exhaust[2]": 0.0
          },
          "time_span": { "start": 0.0, "end": 1.0 },
          "assertions": [
            { "variable": "running_exhaust[1]", "time": 1.0, "expected": 9.0 },
            { "variable": "running_exhaust[2]", "time": 1.0, "expected": 18.0 }
          ]
        }
      ]
    }
  }
}
