tests/invalid/aggregate/join_on_empty.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "join_on_empty",
    "description": "INVALID (bead ess-my4.2.5): an `aggregate` node whose `join` clause carries an EMPTY `on` list — `\"on\": []` (RFC semiring-faq-unified-ir §5.3 / §8). The schema requires at least one [left, right] key-column pair per clause (`on` has `minItems: 1`): an equi-join with no key columns is meaningless. A length-0 `on` is a pure schema (array-length) violation, caught by every binding at validation time.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.nux"
    ],
    "tags": [
      "aggregate",
      "join",
      "invalid",
      "schema",
      "ess-my4.2.5"
    ]
  },
  "models": {
    "EmptyJoinOn": {
      "index_sets": {
        "sourceType": {
          "kind": "categorical",
          "members": ["onroad", "nonroad"]
        }
      },
      "variables": {
        "u": {
          "type": "state"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": ["u"],
            "wrt": "t"
          },
          "rhs": {
            "op": "aggregate",
            "output_idx": [],
            "ranges": {
              "src": { "from": "sourceType" }
            },
            "join": [
              { "on": [] }
            ],
            "expr": {
              "op": "index",
              "args": ["u", "src"]
            },
            "args": ["u"]
          }
        }
      ]
    }
  }
}
